Bug main view clear fixed if one donation receipt was printed and there were two other receipts remaining.